--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="utf-8">
   <title>Planco</title>
@@ -10,4 +10,5 @@
 <body>
   <app-root></app-root>
 </body>
+
 </html>
